--- a/examples/cowboy-chat/apps/chat/priv/index.html
+++ b/examples/cowboy-chat/apps/chat/priv/index.html
@@ -4,21 +4,106 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
           rel="stylesheet">
 
+    <style type="text/css">
+    #chat {
+        background: #eee;
+        border: 1px solid #444;
+        border-radius: 5px;
+        height: 300px;
+        overflow: scroll;
+        padding: 5px;
+    }
+    .navbar-inverse .navbar-brand {
+        font-size: 24pt;
+        color: #bece35;
+    }
+    </style>
+
+    <script src="//code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js">
+    </script>
+    <script type="text/javascript">
+    var ws = new WebSocket('ws://localhost:8080/chat');
+
+    ws.onopen = function() { console.log("Socket is open"); }
+    ws.onclose = function() { console.log("Socket is closed"); }
+
+    ws.onmessage = function(event) {
+        console.log(event.data);
+        var msg = event.data.split('\n');
+        said(msg[0], msg[1]);
+    }
+
+    var nick = '';
+
+    function login(name) {
+        nick = name;
+        $('#typeHere').text('2. Hey ' + nick + '!');
+
+        ws.send('join\n' + nick);
+    }
+
+    function say(msg) {
+        render(nick, msg);
+        ws.send('say\n' + msg);
+    }
+
+    function said(who, what) {
+        render(who, what);
+    }
+
+    function render(name, msg) {
+        $("#chat").append('<p><em>' + name + '</em>:' + msg + '</p>');
+    }
+
+    $(function() {
+        $("#login").click(function() {
+            login($('#name').val());
+            $('#name').addClass('disabled');
+        });
+
+        $("#loginForm").submit(function(event) {
+            login($('#name').val());
+            event.preventDefault();
+        });
+
+        $("#chatForm").submit(function(event) {
+            var txt = $('#say').val();
+            say(txt);
+            event.preventDefault();
+        });
+    });
     </script>
 </head>
 
 <body>
 
+<nav class="navbar navbar-inverse">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="" style="padding-left: 60px">Chat with the pals</a>
+    </div>
+</nav>
+
 <div class="container">
     <div class="col-md-4">
-        Login
+        <h3>1. Sign in</h3>
+        <form id="loginForm">
+            <label>Your name</label>
+            <input type="text" class="form-control" id="name"><br/>
+            <button class="btn btn-primary" id="login">Login</button> 
+        </form>
     </div>
 
     <div class="col-md-8">
-        Chat here
+        <h3 id="typeHere">2. Type here</h3>
         
-        Input form here
+        <form id="chatForm">
+            <label>Chat with the friends</label>
+            <input type="text" class="form-control" id="say"><br/>
+        </form>
+        
+        <div id="chat">
+        </div>
     </div>
 </div>
 
